--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 
 # misc
 .DS_Store
-*.pem
+.pem
 
 # debug
 npm-debug.log*
@@ -34,11 +34,11 @@ yarn-error.log*
 .vercel
 
 # typescript
-*.tsbuildinfo
+.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
+.genkit/
+.env
 
 # firebase
 firebase-debug.log
